--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!--コメントアウト-->
+<html>
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=320,initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<title>画像合成</title>
+<title>冒険</title>
+<!--
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.17/dist/vue.js"></script>
+-->
+<script type="text/javascript"></script>
 <script type="text/javascript" src="jquery-1.9.0.min.js"></script>
 <script type="text/javascript" src="enchant.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
-<!--<form method="POST" action="comment.php?rep=1" target="com">
-<span id="p5"</span><b></b><br>
-<input type="text" id="comment" name="comment"  size="40" style="border:1px solid #00ccff">
-<input type="submit" id="submit" value=" 読み込み " style="width:100">
-<input type="hidden" id="TAG_COMMENT" name="TAG_COMMENT" value="Comment.msg" >-->
-
 </head>
 <body>
-<div id="base" style="overflow:hidden;position:relative;">
+<div id="app">
 <div id="enchant-stage">
 </div>
 <div>
